--- a/public/base.html
+++ b/public/base.html
@@ -111,12 +111,8 @@
 
             </div>
             <div class="col-3">
-                <h2 class="mt-5">Second column</h2>
-                <div class="row">
-                    <div class="col-3">first</div>
-                    <div class="col-3">second</div>
-                    <div class="col-3">third</div>
-                </div>
+                <h2 class="mt-5">Tags</h2>
+
             </div>
         </div>
     </div>
