--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,13 @@
                 <div class="row question">
                     <div class="col-2">
                         <img src="../img/duck.jpg" class="picture" alt="">
-
+                        <div class="row" style="align-items: center;">
+                            <div class="col-4">100</div>
+                            <div class="col-4">
+                                <button class="navbar-toggler like">like</button>
+                                <button class="navbar-toggler dislike">dislike</button>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-10">
                         <h4>Question1</h4>
@@ -102,11 +108,18 @@
                             безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum
                             для распечатки образцов. </p>
                     </div>
+
                 </div>
                 <div class="row question">
                     <div class="col-2">
                         <img src="../img/duck.jpg" class="picture" alt="">
-
+                        <div class="row" style="align-items: center;">
+                            <div class="col-4">100</div>
+                            <div class="col-4">
+                                <button class="navbar-toggler like">like</button>
+                                <button class="navbar-toggler dislike">dislike</button>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-10">
                         <h4>Question2</h4>
@@ -119,7 +132,13 @@
                 <div class="row question">
                     <div class="col-2">
                         <img src="../img/duck.jpg" class="picture" alt="">
-
+                        <div class="row" style="align-items: center;">
+                            <div class="col-4">100</div>
+                            <div class="col-4">
+                                <button class="navbar-toggler like">like</button>
+                                <button class="navbar-toggler dislike">dislike</button>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-10">
                         <h4>Question3</h4>
@@ -130,6 +149,13 @@
                     </div>
                 </div>
 
+                <div class="row" style="margin: 20px;">
+                    <button class="col-1 btn btn-outline-success" type="submit">1</button>
+                    <button class="col-1 btn btn-outline-success" type="submit">2</button>
+                    <button class="col-1 btn btn-outline-success" type="submit">3</button>
+                    <button class="col-1 btn btn-outline-success" type="submit">...</button>
+                    <button class="col-1 btn btn-outline-success" type="submit">n</button>
+                </div>
             </div>
             <div class="col-3">
                 <h2 class="mt-5">Tags</h2>
