--- a/public/question.html
+++ b/public/question.html
@@ -73,6 +73,13 @@
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
+                    <img src="../img/logo.jpg" class="logo_header" alt="">
+                    <div class="col-3">
+                        <li class="nav-item">
+                            <div class="login" title="your_login">Authorized user</div>
+                        </li>
+                        <button class="btn btn-outline-success logout_b" type="submit">Logout</button>
+                    </div>
                 </form>
             </div>
         </div>
