--- a/public/base.html
+++ b/public/base.html
@@ -79,7 +79,14 @@
                         <li class="nav-item">
                             <div class="login" title="your_login">Authorized user</div>
                         </li>
-                        <button class="btn btn-outline-success logout_b" type="submit">Logout</button>
+                        <div class="row">
+                            <div class="col-5">
+                                <a href="www.youtube.com">settings</a>
+                            </div>
+                            <div class="col-5">
+                                <a href="www.youtube.com">logout</a>
+                            </div>
+                        </div>
                     </div>
                 </form>
 
