--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,8 @@
 
     
 
+
+
     </style>
 
 
@@ -77,6 +79,20 @@
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
+                    <img src="../img/logo.jpg" class="logo_header" alt="">
+                    <div class="col-3">
+                        <li class="nav-item">
+                            <div class="login" title="your_login">Authorized user</div>
+                        </li>
+                        <div class="row">
+                            <div class="col-5">
+                                <a href="www.youtube.com">settings</a>
+                            </div>
+                            <div class="col-5">
+                                <a href="www.youtube.com">logout</a>
+                            </div>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
