--- a/public/index.html
+++ b/public/index.html
@@ -77,8 +77,8 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    <input class="form-control me-2 search_f" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success search_f" type="submit">Search</button>
                     <img src="../img/logo.jpg" class="logo_header" alt="">
                     <div class="col-3">
                         <li class="nav-item">
