--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,11 @@
 
 
 
+
+
+
+
+
     </style>
 
 
@@ -123,6 +128,21 @@
                             является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий
                             безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum
                             для распечатки образцов. </p>
+                        <div class="row">
+                            <div class="col-3" style="text-align: center;">
+                                <a href="">answers(N)</a>
+                            </div>
+                            <div class="col-1">Tags:</div>
+                            <div class="col-2">
+                                <a href="">first tag</a>
+                            </div>
+                            <div class="col-2">
+                                <a href="">first tag</a>
+                            </div>
+                            <div class="col-2">
+                                <a href="">first tag</a>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
@@ -143,6 +163,21 @@
                             является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий
                             безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum
                             для распечатки образцов. </p>
+                        <div class="row">
+                            <div class="col-3" style="text-align: center;">
+                                <a href="">answers(N)</a>
+                            </div>
+                            <div class="col-1">Tags:</div>
+                            <div class="col-2">
+                                <a href="">first tag</a>
+                            </div>
+                            <div class="col-2">
+                                <a href="">first tag</a>
+                            </div>
+                            <div class="col-2">
+                                <a href="">first tag</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="row question">
@@ -162,6 +197,21 @@
                             является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий
                             безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum
                             для распечатки образцов. </p>
+                        <div class="row">
+                            <div class="col-3" style="text-align: center;">
+                                <a href="">answers(N)</a>
+                            </div>
+                            <div class="col-1">Tags:</div>
+                            <div class="col-2">
+                                <a href="">first tag</a>
+                            </div>
+                            <div class="col-2">
+                                <a href="">first tag</a>
+                            </div>
+                            <div class="col-2">
+                                <a href="">first tag</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -175,6 +225,20 @@
             </div>
             <div class="col-3">
                 <h2 class="mt-5">Tags</h2>
+                <div class="row">
+                    <a href="">
+                        <div class="tag">first tag</div>
+                    </a>
+                    <a href="">
+                        <div class="tag">second tag</div>
+                    </a>
+                    <a href="">
+                        <div class="tag">third tag</div>
+                    </a>
+                    <a href="">
+                        <div class="tag">others tag</div>
+                    </a>
+                </div>
             </div>
         </div>
 
