base, index, question, ask, login

--- a/public/question.html
+++ b/public/question.html
@@ -48,6 +48,8 @@
 
 
 
+
+
     </style>
 
 
@@ -175,6 +177,13 @@
                             безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum
                             для распечатки образцов. </p>
                     </div>
+                </div>
+                <div class="row" style="margin: 20px;">
+                    <button class="col-1 btn btn-outline-success" type="submit">1</button>
+                    <button class="col-1 btn btn-outline-success" type="submit">2</button>
+                    <button class="col-1 btn btn-outline-success" type="submit">3</button>
+                    <button class="col-1 btn btn-outline-success" type="submit">...</button>
+                    <button class="col-1 btn btn-outline-success" type="submit">n</button>
                 </div>
                 <hr>
                 <textarea class="t_area" placeholder="Enter your answer here"
