base, index, question, ask, login + signup

--- a/public/signup.html
+++ b/public/signup.html
@@ -54,6 +54,8 @@
 
 
 
+
+
     </style>
 
 
@@ -85,19 +87,12 @@
                 <form class="d-flex">
                     <input class="form-control me-2 search_f" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success search_f" type="submit">Search</button>
-                    <img src="../img/logo.jpg" class="logo_header" alt="">
-                    <div class="col-3">
-                        <li class="nav-item">
-                            <div class="login" title="your_login">Authorized user</div>
-                        </li>
-                        <div class="row">
-                            <div class="col-5">
-                                <a href="www.youtube.com">settings</a>
-                            </div>
-                            <div class="col-5">
-                                <a href="www.youtube.com">logout</a>
-                            </div>
-                        </div>
+                    <div class="row" style="margin: 8px;">
+                            <a style="width: 64px;" href="www.youtube.com">log in</a>
+
+
+                            <a style="width: 64px;" href="www.youtube.com">register</a>
+
                     </div>
                 </form>
 
@@ -111,34 +106,65 @@
     <div class="container">
         <div class="row">
             <div class="col-9">
-                <h2 class="mt-5">New question</h2>
+                <h2 class="mt-5">Registration</h2>
                 <div class="row answer">
-                    <div class="col-2">
-                        <div style="font-size: 170%;">Title</div>
+                    <div class="col-3">
+                        <div class="reg_tag">Login</div>
                     </div>
-                    <div class="col-10">
-                        <input class="new_question_input" type="text" placeholder="Title of your question">
+                    <div class="col-7">
+                        <input class="reg_field" type="text" placeholder="Your login">
                     </div>
                 </div>
                 <div class="row answer">
-                    <div class="col-2">
-                        <div style="font-size: 170%;">Text</div>
+                    <div class="col-3">
+                        <div class="reg_tag">Email</div>
                     </div>
-                    <div class="col-10">
-                        <textarea class="new_question_t_area" placeholder="Enter your question text"
-                                  aria-label="Enter your answer here"></textarea>
+                    <div class="col-7">
+                        <input class="reg_field" type="text" placeholder="adasfa@mail.ru">
+                        <h5 style="margin: 8px; color: red;">Email is in use or incorrect</h5>
                     </div>
                 </div>
                 <div class="row answer">
-                    <div class="col-2">
-                        <div style="font-size: 170%;">Tags</div>
+                    <div class="col-3">
+                        <div class="reg_tag">Nickname</div>
                     </div>
-                    <div class="col-10">
-                        <input class="new_question_input" type="text" placeholder="Tags of your question">
-                        <h5 style="margin: 8px; color: red;">Incorrect format of data</h5>
-                        <button class="btn btn-outline-success" style="margin: 8px;" type="submit">Ask</button>
+                    <div class="col-7">
+                        <input class="reg_field" type="text" placeholder="Your nickname">
                     </div>
-
+                </div>
+                <div class="row answer">
+                    <div class="col-3">
+                        <div class="reg_tag">Password</div>
+                    </div>
+                    <div class="col-7">
+                        <input class="reg_field" type="text" placeholder="Password">
+                    </div>
+                </div>
+                <div class="row answer">
+                    <div class="col-3">
+                        <div class="reg_tag">Repeat password</div>
+                    </div>
+                    <div class="col-7">
+                        <input class="reg_field" type="text" placeholder="Repeat password">
+                        <h5 style="margin: 8px; color: red;">passwords are not the same</h5>
+                    </div>
+                </div>
+                <div class="row answer">
+                    <div class="col-3">
+                        <div class="reg_tag">Avatar</div>
+                    </div>
+                    <div class="col-7">
+                        <div class="row">
+                            <div class="col-10">
+                            <input class="reg_field" type="text" placeholder="Path to file">
+                                </div>
+                            <div class="col-1">
+                                <button class="btn-outline-success" style="margin: 8px;" type="submit">choose</button>
+                            </div>
+                        </div>
+                        <h5 style="margin: 8px; color: red;">You have some mistakes</h5>
+                        <button class="btn btn-outline-success" style="margin: 8px;" type="submit">Register</button>
+                    </div>
                 </div>
 
             </div>
