--- a/public/question.html
+++ b/public/question.html
@@ -91,7 +91,7 @@
                                 <a href="www.youtube.com">settings</a>
                             </div>
                             <div class="col-5">
-                                <a href="www.youtube.com">logout</a>
+                                <a href="./login.html">logout</a>
                             </div>
                         </div>
                     </div>
