--- a/public/signup.html
+++ b/public/signup.html
@@ -88,10 +88,9 @@
                     <input class="form-control me-2 search_f" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success search_f" type="submit">Search</button>
                     <div class="row" style="margin: 8px;">
-                            <a style="width: 64px;" href="www.youtube.com">log in</a>
+                            <a style="width: 64px;" href="./login.html">log in</a>
 
-
-                            <a style="width: 64px;" href="www.youtube.com">register</a>
+                            <a style="width: 64px;" href="./signup.html">register</a>
 
                     </div>
                 </form>
