--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
                                 <a href="www.youtube.com">settings</a>
                             </div>
                             <div class="col-5">
-                                <a href="www.youtube.com">logout</a>
+                                <a href="./login.html">logout</a>
                             </div>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                         </div>
                     </div>
                     <div class="col-10">
-                        <h4>Question1</h4>
+                        <h4><a href="./question.html">Question1</a></h4>
                         <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum
                             является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий
                             безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum
@@ -161,7 +161,7 @@
                         </div>
                     </div>
                     <div class="col-10">
-                        <h4>Question2</h4>
+                        <h4><a href="./question.html">Question2</a></h4>
                         <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum
                             является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий
                             безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum
@@ -195,7 +195,7 @@
                         </div>
                     </div>
                     <div class="col-10">
-                        <h4>Question3</h4>
+                        <h4><a href="./question.html">Question3</a></h4>
                         <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum
                             является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий
                             безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum
