--- a/public/question.html
+++ b/public/question.html
@@ -81,7 +81,7 @@
                 <form class="d-flex">
                     <input class="form-control me-2 search_f" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success search_f" type="submit">Search</button>
-                    <img src="../img/logo.jpg" class="logo_header" alt="">
+                    <img src="../static/img/logo.jpg" class="logo_header" alt="">
                     <div class="col-2">
                         <li class="nav-item">
                             <div class="login" title="your_login">Authorized user</div>
@@ -109,7 +109,7 @@
             <div class="col-9">
                 <div class="row answer mt-5">
                     <div class="col-2">
-                        <img src="../img/duck.jpg" class="picture" alt="">
+                        <img src="../static/img/duck.jpg" class="picture" alt="">
                         <div class="row" style="align-items: center;">
                             <div class="col-4">100</div>
                             <div class="col-4">
@@ -144,7 +144,7 @@
                 <hr>
                 <div class="row question">
                     <div class="col-2">
-                        <img src="../img/duck.jpg" class="picture" alt="">
+                        <img src="../static/img/duck.jpg" class="picture" alt="">
                         <div class="row" style="align-items: center;">
                             <div class="col-4">100</div>
                             <div class="col-4">
@@ -162,7 +162,7 @@
                 </div>
                 <div class="row question">
                     <div class="col-2">
-                        <img src="../img/duck.jpg" class="picture" alt="">
+                        <img src="../static/img/duck.jpg" class="picture" alt="">
                         <div class="row" style="align-items: center;">
                             <div class="col-4">100</div>
                             <div class="col-4">
