--- a/public/ask.html
+++ b/public/ask.html
@@ -85,7 +85,7 @@
                 <form class="d-flex">
                     <input class="form-control me-2 search_f" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success search_f" type="submit">Search</button>
-                    <img src="../img/logo.jpg" class="logo_header" alt="">
+                    <img src="../static/img/logo.jpg" class="logo_header" alt="">
                     <div class="col-2">
                         <li class="nav-item">
                             <div class="login" title="your_login">Authorized user</div>
