--- a/public/base.html
+++ b/public/base.html
@@ -76,7 +76,7 @@
                 <form class="d-flex">
                     <input class="form-control me-2 search_f" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success search_f" type="submit">Search</button>
-                    <img src="../img/logo.jpg" class="logo_header" alt="">
+                    <img src="../static/img/logo.jpg" class="logo_header" alt="">
                     <div class="col-2">
                         <li class="nav-item">
                             <div class="login" title="your_login">Authorized user</div>
@@ -105,7 +105,7 @@
                 <h2 class="mt-5">First column</h2>
                 <div class="row question">
                     <div class="col-2">
-                        <img src="../img/duck.jpg" class="picture" alt="">
+                        <img src="../static/img/duck.jpg" class="picture" alt="">
 
                     </div>
                     <div class="col-10">
