--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
                 <form class="d-flex">
                     <input class="form-control me-2 search_f" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success search_f" type="submit">Search</button>
-                    <img src="../img/logo.jpg" class="logo_header" alt="">
+                    <img src="../static/img/logo.jpg" class="logo_header" alt="">
                     <div class="col-2">
                         <li class="nav-item">
                             <div class="login" title="your_login">Authorized user</div>
@@ -116,7 +116,7 @@
 
                 <div class="row question">
                     <div class="col-2">
-                        <img src="../img/duck.jpg" class="picture" alt="">
+                        <img src="../static/img/duck.jpg" class="picture" alt="">
                         <div class="row" style="align-items: center;">
                             <div class="col-4">100</div>
                             <div class="col-4">
@@ -151,7 +151,7 @@
                 </div>
                 <div class="row question">
                     <div class="col-2">
-                        <img src="../img/duck.jpg" class="picture" alt="">
+                        <img src="../static/img/duck.jpg" class="picture" alt="">
                         <div class="row" style="align-items: center;">
                             <div class="col-4">100</div>
                             <div class="col-4">
@@ -185,7 +185,7 @@
                 </div>
                 <div class="row question">
                     <div class="col-2">
-                        <img src="../img/duck.jpg" class="picture" alt="">
+                        <img src="../static/img/duck.jpg" class="picture" alt="">
                         <div class="row" style="align-items: center;">
                             <div class="col-4">100</div>
                             <div class="col-4">
