--- a/public/ask.html
+++ b/public/ask.html
@@ -92,7 +92,7 @@
                         </li>
                         <div class="row">
                             <div class="col-5">
-                                <a href="www.youtube.com">settings</a>
+                                <a href="">settings</a>
                             </div>
                             <div class="col-5">
                                 <a href="./login.html">logout</a>
