--- a/public/base.html
+++ b/public/base.html
@@ -83,10 +83,10 @@
                         </li>
                         <div class="row">
                             <div class="col-5">
-                                <a href="www.youtube.com">settings</a>
+                                <a href="">settings</a>
                             </div>
                             <div class="col-5">
-                                <a href="www.youtube.com">logout</a>
+                                <a href="./login.html">logout</a>
                             </div>
                         </div>
                     </div>
